--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,9 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "./node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
-            "scripts": ["node_modules/flowbite/dist/flowbite.min.js"]
+            "scripts": ["./node_modules/flowbite/dist/flowbite.min.js"]
           },
           "configurations": {
             "production": {
