--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/postcss": "^4.1.7",
+    "chart.js": "^4.5.0",
     "flowbite": "^3.1.2",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
